Fixed content out of view on md screen

--- a/app/css/my.css
+++ b/app/css/my.css
@@ -199,7 +199,8 @@ html{height:100%;}
  .thumb-body {
  	padding: 0px 9px;
  	height: 120px;
- 	overflow: auto;
+ 	overflow-x: hidden;
+  overflow-y: auto; 
  }
 
  .thumb-body-small {
